--- a/Project/Client/Views/Admin/UserDelete.cshtml
+++ b/Project/Client/Views/Admin/UserDelete.cshtml
@@ -23,24 +23,28 @@
             </dt>
             <dd class="col-sm-10">
                 <input type="text" asp-for="Id" class="form-control" readonly />
+                <span asp-validation-for="Id" class="text-danger"></span>
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Username)
             </dt>
             <dd class="col-sm-10">
                 <input type="text" asp-for="Username" class="form-control" readonly />
+                <span asp-validation-for="Username" class="text-danger"></span>
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Email)
             </dt>
             <dd class="col-sm-10">
                 <input type="text" asp-for="Email" class="form-control" readonly />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.PhoneNumber)
             </dt>
             <dd class="col-sm-10">
-                <input type="text" asp-for="PhoneNumber" class="form-control" readonly />
+                <input type="text" asp-for="PhoneNumber" class="form-control" readonly />   
+                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </dd>
         </dl>
 
@@ -49,3 +53,8 @@
     </form>
 
 </div>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
