--- a/Project/Client/Views/Admin/_OrderItemsPartial.cshtml
+++ b/Project/Client/Views/Admin/_OrderItemsPartial.cshtml
@@ -22,27 +22,27 @@
                                 <div class="mb-2">
                                     <label class="form-label">Product Id</label>
                                     <input type="text" readonly asp-for="@item.ProductId" class="form-control">
-                                    <span class="text-danger"></span>
+                                    <span class="text-danger" asp-validation-for="@item.ProductId"></span>
                                 </div>
                                 <div class="mb-2">
                                     <label class="form-label">Product name</label>
                                     <input type="text" readonly asp-for="@item.ProductName" class="form-control">
-                                    <span class="text-danger"></span>
+                                    <span class="text-danger" asp-validation-for="@item.ProductName"></span>
                                 </div>
                                 <div class="mb-2">
                                     <label class="form-label">Total price</label>
                                     <input type="text" readonly asp-for="@item.TotalPrice" class="form-control">
-                                    <span class="text-danger"></span>
+                                    <span class="text-danger" asp-validation-for="@item.TotalPrice"></span>
                                 </div>
                                 <div class="mb-2">
                                     <label class="form-label">Publisher Name</label>
                                     <input type="text" readonly asp-for="@item.PublisherName" class="form-control">
-                                    <span class="text-danger"></span>
+                                    <span class="text-danger" asp-validation-for="@item.PublisherName"></span>
                                 </div>
                                 <div class="mb-2">
-                                    <label class="form-label">Publisher Name</label>
-                                    <input type="text" readonly asp-for="@item.Quantity" class="form-control">
-                                    <span class="text-danger"></span>
+                                    <label class="form-label">Publisher Quantity</label>
+                                    <input type="number" readonly asp-for="@item.Quantity" class="form-control">
+                                    <span class="text-danger" asp-validation-for="@item.Quantity"></span>
                                 </div>
                                 <hr>
                                 <br />
