--- a/Project/Client/Views/User/ChangePassword.cshtml
+++ b/Project/Client/Views/User/ChangePassword.cshtml
@@ -1,120 +1,7 @@
 ﻿@{
     Layout = "_LayoutNull";
 }
-@* <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <style>
-        body, html {
-            height: 100%;
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        .login-container {
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            overflow: hidden;
-            background-image: url('/image/bg01.jpg');
-            background-size: cover;
-            background-position: center;
-        }
-
-            .login-container::before {
-                content: '';
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                background: rgba(255, 255, 255, 0.5);
-                z-index: 0;
-            }
-
-        .login-box {
-            position: relative;
-            background-color: rgba(255, 255, 255, 0.82);
-            padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 400px;
-            color: white;
-            z-index: 2;
-        }
-
-        .login-logo {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-            .login-logo img {
-                max-width: 150px; /* Thay đổi kích thước logo ở đây */
-            }
-
-        .login-title {
-            text-align: center;
-            font-size: 24px;
-            font-weight: bold;
-            color: grey;
-            margin-bottom: 30px;
-        }
-
-        .login-input {
-            margin-bottom: 20px;
-            position: relative;
-        }
-
-            .login-input input {
-                height: 45px;
-                background-color: #f3f3f3;
-                border: none;
-            }
-
-                .login-input input::placeholder {
-                    color: #666;
-                }
-
-        .input-group-text {
-            background-color: #f3f3f3;
-            border: none;
-            color: #666;
-        }
-
-        .login-btn {
-            background-color: #00d55e;
-            border: none;
-            width: 100%;
-            padding: 10px;
-            color: whitesmoke;
-            font-size: 18px;
-            border-radius: 5px;
-        }
-
-            .login-btn:hover {
-                background-color: forestgreen;
-            }
-
-        .login-divider {
-            margin-top: 20px;
-        }
-
-        .white-background {
-            padding-bottom: 10px;
-        }
-    </style>
-</head>
-<body> *@
+@model Client.Models.AuthenModel.ChangePasswordModel
 <div class="login-container">
     <div class="login-box">
         <div class="login-logo">
@@ -126,25 +13,30 @@
                 <span class="input-group-text">
                     <i class="bi bi-lock"></i>
                 </span>
-                <input type="password" class="form-control" placeholder="Password" required>
+                <input type="password" class="form-control" asp-for="OldPassword" placeholder="Password" required>
+                <span asp-validation-for="OldPassword" class="text-danger"></span>
             </div>
             <div class="login-input input-group">
                 <span class="input-group-text">
                     <i class="bi bi-key"></i>
                 </span>
-                <input type="password" class="form-control" placeholder="New Password" required>
+                <input type="password" class="form-control" asp-for="NewPassword" placeholder="New Password" required>
+                <span asp-validation-for="NewPassword" class="text-danger"></span>
             </div>
             <div class="login-input input-group">
                 <span class="input-group-text">
                     <i class="bi bi-shield-lock"></i>
                 </span>
-                <input type="password" class="form-control" placeholder="Cofirm Password" required>
+                <input type="password" class="form-control" asp-for="ConfirmPassword" placeholder="Confirm Password" required>
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <button type="submit" class="login-btn fw-bold">Change Password</button>
         </form>
     </div>
 </div>
-@*
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html> *@
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
