--- a/Project/Client/Views/User/Login.cshtml
+++ b/Project/Client/Views/User/Login.cshtml
@@ -16,13 +16,15 @@
                 <span class="input-group-text">
                     <i class="bi bi-person"></i>
                 </span>
-                <input asp-for="UsernameOrEmail" type="text" class="form-control" placeholder="Username" required>
+                <input asp-for="UsernameOrEmail" type="text" class="form-control" placeholder="Username" >
+                <span asp-validation-for="@Model.UsernameOrEmail" class="text-danger"></span>
             </div>
             <div class="login-input input-group">
                 <span class="input-group-text">
                     <i class="bi bi-lock"></i>
                 </span>
-                <input asp-for="Password" type="password" class="form-control" placeholder="Password" required>
+                <input asp-for="Password" type="password" class="form-control" placeholder="Password" >
+                <span asp-validation-for="@Model.Password" class="text-danger"></span>
             </div>
             <div class="d-flex justify-content-between mb-3">
                 <div class="form-check">
