--- a/Project/Client/Views/Shared/_LayoutNull.cshtml
+++ b/Project/Client/Views/Shared/_LayoutNull.cshtml
@@ -147,3 +147,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+@section Scripts {
+
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+}
