--- a/Project/Client/Views/User/PasswordSecurity.cshtml
+++ b/Project/Client/Views/User/PasswordSecurity.cshtml
@@ -1,4 +1,4 @@
-﻿@model Client.Models.UserDTO.UpdateUser
+﻿@model Client.Models.AuthenModel.ChangePasswordModel
 
 <div class="main">
     <div class="row justify-content-center">
@@ -17,11 +17,6 @@
                 <div class="custom-nav-item">
                     <button type="button">
                         <i class="fas fa-user"></i> User information
-                    </button>
-                </div>
-                <div class="custom-nav-item">
-                    <button type="button">
-                        <i class="fas fa-info-circle"></i> Additional Information
                     </button>
                 </div>
                 <div class="custom-nav-item">
@@ -48,29 +43,33 @@
             </div>
             <hr />
             <!-- Đổi email và mật khẩu -->
-            <form class="password-form">
-                <div class="form-group row">
-                    <label for="email" class="col-md-3">Email</label>
+            <form class="password-form" asp-action="ChangePassword">
+
+                <div class="form-group row mt-4">
+                    <label for="password" class="col-md-3">Old Password</label>
                     <div class="col-md-6">
-                        <input type="email" id="email" class="form-control" value="tuandeptrail@gmail.com" readonly />
+                        <input type="password" id="password" class="form-control" asp-for=@Model.OldPassword value="***********"  />
                     </div>
                     <div class="col-md-3">
-                        <button class="btn btn-success">Change</button>
+                        <button class="btn btn-success">Save</button>
                     </div>
                 </div>
 
                 <div class="form-group row mt-4">
-                    <label for="password" class="col-md-3">Password</label>
+                    <label for="password" class="col-md-3">New Password</label>
                     <div class="col-md-6">
-                        <input type="password" id="password" class="form-control" value="***********" readonly />
+                        <input type="password" id="password" class="form-control" asp-for=@Model.NewPassword value="***********"  />
                     </div>
-                    <div class="col-md-3">
-                        <button class="btn btn-success">Change</button>
+                </div>
+                <div class="form-group row mt-4">
+                    <label for="password" class="col-md-3">Confirm Password</label>
+                    <div class="col-md-6">
+                        <input type="password" id="password" class="form-control" asp-for=@Model.ConfirmPassword value="***********"  />
                     </div>
                 </div>
 
                 <div class="logout-section mt-5">
-                    <button class="btn btn-danger">Logout</button>
+                    <a asp-action="Logout" asp-controller="User" class="btn btn-danger">Logout</a>
                     <span class="mx-2">You can easily logout all your current sessions on all devices. The process can take up to one hour.</span>
                 </div>
             </form>
@@ -80,7 +79,7 @@
             <!-- Security Tips -->
             <h4 class="fw-bold text-secondary"><i class="fas fa-shield-alt"></i> Security Tips</h4>
             <ul class="list-group mb-5">
-                <li class="list-group-item">Use a strong password with at least 8 characters, including uppercase, lowercase, numbers, and symbols.</li>
+                <li class="list-group-item">Use a strong password with at least 6 characters, including uppercase, lowercase, numbers, and symbols.</li>
                 <li class="list-group-item">Change your password regularly to protect your account.</li>
                 <li class="list-group-item">Enable two-factor authentication (2FA) for added security.</li>
             </ul>
