--- a/Project/Client/Views/User/UploadProduct.cshtml
+++ b/Project/Client/Views/User/UploadProduct.cshtml
@@ -260,6 +260,13 @@
                 <button type="button" class="btn btn-outline-dark mt-2 w-100" onclick="document.getElementById('coverImageInput').click()">Upload Cover Image</button>
             </div>
         </div>
+         <div class="col-md-4">
+            <div class="text-center">
+                <img src="~/image/avatar.jpeg" alt="Cover Image" class="border mb-3" style="width:200px; height:200px;" />
+                <input type="file" name="coverImage" class="d-none" id="coverImageInput" accept="image/*" />
+                <button type="button" class="btn btn-outline-dark mt-2 w-100" onclick="document.getElementById('coverImageInput').click()">Upload Cover Image</button>
+            </div>
+        </div>
 
         <!-- Nút tạo sản phẩm -->
         <div class="col-12 text-center mt-4">
