--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                                     Products
                                 </a>
                             </li>
-                            <li class="nav-item dropdown">
+                         @*    <li class="nav-item dropdown">
                                 <a class="nav-link btn fw-bold" id="navbarDropdown2" role="button">
                                     Game 2D/3D
                                 </a>
@@ -67,7 +67,7 @@
                                 <a class="nav-link btn fw-bold" id="navbarDropdown2" role="button">
                                     Asset 2D/3D
                                 </a>
-                            </li>
+                            </li> *@
                             <li class="nav-item dropdown">
                                 <a class="nav-link btn fw-bold" id="navbarDropdown2" role="button">
                                     Help
