--- a/Project/Client/Views/Home/Index.cshtml
+++ b/Project/Client/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
      data-login_uri='/google-response'
      data-auto_prompt='false'>
 </div>
-<div id="carouselExampleInterval" class="carousel slide mt-4 w-100 h-100" data-bs-ride="carousel" style="border-radius:5px; margin: 0 3%;">
+<div id="carouselExampleInterval" class="carousel slide mt-4 w-100 h-100" data-bs-ride="carousel" style="border-radius:5px;  margin: 0 auto; width: 80%;">
     <div class="carousel-inner">
         @if (Model.Product != null)
         {
@@ -52,7 +52,9 @@
                         // Hiển thị hình ảnh đầu tiên nếu có
                         if (firstImageUrl != null)
                         {
-                            <img src="@firstImageUrl" alt="Cloudinary Image" class="d-block w-100" style="border-radius:5px;" />
+                            <div class="carousel-image-container">
+                                <img src="@firstImageUrl" alt="Cloudinary Image" class="d-block w-100 carousel-image" />
+                            </div>
                         }
                     }
                 </div>
@@ -376,7 +378,9 @@
                             string firstImageUrl = product.Links.FirstOrDefault(link => link.Url.Contains("cloudinary"))?.Url;
                             if (firstImageUrl != null)
                             {
-                                <img src="@firstImageUrl" alt="Cloudinary Image" class="img-fluid" />
+                                <div style="width: 100%;height: 70px;overflow: hidden;display: flex;align-items: center;justify-content: center;">
+                                    <img src="@firstImageUrl" alt="Cloudinary Image" style=" width: 100%;height: 100%;object-fit: cover;" />
+                                </div>
                             }
                         }
                     </div>
@@ -409,7 +413,9 @@
                             string firstImageUrl = product.Links.FirstOrDefault(link => link.Url.Contains("cloudinary"))?.Url;
                             if (firstImageUrl != null)
                             {
-                                <img src="@firstImageUrl" alt="Cloudinary Image" class="img-fluid" />
+                                <div style="width: 100%;height: 70px;overflow: hidden;display: flex;align-items: center;justify-content: center;">
+                                    <img src="@firstImageUrl" alt="Cloudinary Image" style=" width: 100%;height: 100%;object-fit: cover;" />
+                                </div>
                             }
                         }
                     </div>
@@ -447,7 +453,9 @@
                             // Hiển thị hình ảnh đầu tiên nếu có
                             if (firstImageUrl != null)
                             {
-                                <img src="@firstImageUrl" alt="Cloudinary Image" class="img-fluid" />
+                                <div style="width: 100%;height: 70px;overflow: hidden;display: flex;align-items: center;justify-content: center;">
+                                    <img src="@firstImageUrl" alt="Cloudinary Image" style=" width: 100%;height: 100%;object-fit: cover;" />
+                                </div>
                             }
 
 
