--- a/Project/Client/Views/Admin/CommentManager.cshtml
+++ b/Project/Client/Views/Admin/CommentManager.cshtml
@@ -64,9 +64,9 @@
         <!-- Thanh tìm kiếm và nút Thêm -->
         <div class="d-flex justify-content-between mb-3">
             <form asp-action="SearchCmt" asp-controller="Admin" method="post" class="d-flex gap-2">
-                <input class="form-control" type="text" placeholder="Search by username..." name="searchString" />
-                <input class="form-control" type="date" name="searchDate" id="searchDate" lang="en-CA" />
-                <button class="btn btn-primary" type="submit">Search</button>
+                <input class="form-control" type="text" placeholder="Search by username..." name="searchString" style="width: 300px;" /> <!-- Tăng width cho input tên người dùng -->
+                <input class="form-control" type="date" name="searchDate" id="searchDate" lang="en-CA" style="width: 200px;" /> <!-- Tăng width cho input ngày tháng -->
+                <button class="btn btn-primary" style="width: 150px;" type="submit">Search</button>
             </form>
 
             <div class="w-100">
