Comment/PriductDetail/Client

--- a/Project/Client/Views/Home/Index.cshtml
+++ b/Project/Client/Views/Home/Index.cshtml
@@ -105,7 +105,7 @@
                             </div>
                             <div class="footeer_card">
                                 <div class="btn_card">
-                                    <button>Read more...</button>
+                                    <a asp-controller="Product" asp-action="ProductDetail" asp-route-Id="@product.Id" class="btn_orther">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                     <div class="info_other">
                         <h1>@product.Name</h1>
                         <p>@product.Description</p>
-                        <a asp-controller="" asp-action="" class="btn_orther">Read More</a>
+                        <a asp-controller="Product" asp-action="ProductDetail" asp-route-Id="@product.Id" class="btn_orther">Read More</a>
                     </div>
                 </div>
             }
@@ -225,7 +225,7 @@
                         <div class="info_other">
                             <h1>@product.Name</h1>
                             <p>@product.Description</p>
-                            <a asp-controller="" asp-action="" class="btn_orther">Read More</a>
+                            <a asp-controller="Product" asp-action="ProductDetail" asp-route-Id="@product.Id" class="btn_orther">Read More</a>
                         </div>
                     </div>
                 }
@@ -265,7 +265,7 @@
                         <div class="info_other">
                             <h1>@product.Name</h1>
                             <p>@product.Description</p>
-                            <a asp-controller="" asp-action="" class="btn_orther">Read More</a>
+                            <a asp-controller="Product" asp-action="ProductDetail" asp-route-Id="@product.Id" class="btn_orther">Read More</a>
                         </div>
                     </div>
                 }
@@ -303,7 +303,7 @@
                         <div class="info_other">
                             <h1>@product.Name</h1>
                             <p>@product.Description</p>
-                            <a asp-controller="" asp-action="" class="btn_orther">Read More</a>
+                            <a asp-controller="Product" asp-action="ProductDetail" asp-route-Id="@product.Id" class="btn_orther">Read More</a>
                         </div>
                     </div>
                 }
@@ -347,7 +347,7 @@
                         <div class="info_other">
                             <h1>@product.Name</h1>
                             <p>@product.Description</p>
-                            <a asp-controller="" asp-action="" class="btn_orther">Read More</a>
+                            <a asp-controller="Product" asp-action="ProductDetail" asp-route-Id="@product.Id" class="btn_orther">Read More</a>
                         </div>
                     </div>
                 }
