--- a/Project/Client/Views/Product/Collection.cshtml
+++ b/Project/Client/Views/Product/Collection.cshtml
@@ -127,6 +127,53 @@
     </div>
 </div>
 
+
+<div class="wishlist-container">
+    <h1 class="text-success"><i class="fas fa-heart"></i> Your Wishlist</h1>
+    <div class="collections">
+        <div class="collection-card add-new">
+            + CREATE A NEW WISHLIST
+        </div>
+        <div class="collection-card">
+            <img src="~/Image/game.jpg" alt="Favorites">
+            <div class="text">
+                <p class="title text-white">Favorites</p>
+            </div>
+        </div>
+        <div class="collection-card">
+            <img src="~/Image//game.jpg" alt="Heheh">
+            <div class="text">
+                <p class="title text-white">Heheh</p>
+            </div>
+        </div>
+        <div class="collection-card">
+            <img src="~/Image//game.jpg" alt="Heheh">
+            <div class="text">
+                <p class="title text-white">Heheh</p>
+            </div>
+        </div>
+        <div class="collection-card">
+            <img src="~/Image//game.jpg" alt="Heheh">
+            <div class="text">
+                <p class="title text-white">Heheh</p>
+            </div>
+        </div>
+        <div class="collection-card">
+            <img src="~/Image//game.jpg" alt="Heheh">
+            <div class="text">
+                <p class="title text-white">Heheh</p>
+            </div>
+        </div>
+        <div class="collection-card">
+            <img src="~/Image//game.jpg" alt="Heheh">
+            <div class="text">
+                <p class="title text-white">Heheh</p>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 @* <div class="mt-3" style="background-color: #1c1f26;
             color: #fff;
             display: flex;
