--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 
 </head>
@@ -132,7 +133,7 @@
                                     <a class="navelement" asp-controller="Admin" asp-action="AdminDashboard">AdminDashboard</a>
                                     <a class="navelement" asp-controller="User" asp-action="EditProfile">EditProfile</a>
                                     <a class="navelement" asp-controller="User" asp-action="PasswordSecurity">Password&Security</a>
-                                    <a class="navelement" asp-controller="User" asp-action="UserDashboard">UserDashboard</a>
+                                    <a class="navelement" asp-controller="User" asp-action="UserDashboard" asp-route-name="">UserDashboard</a>
                                 </div>
                             </li>
                         </ul>
